# stock-rag-agentic

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml  deploy.yml
apps/api/: Dockerfile  pyproject.toml
apps/api/alembic/: env.py
apps/api/app/: main.py
apps/api/app/agents/: analyst_agent.py  data_agent.py  reporter_agent.py  risk_agent.py  state.py  supervisor.py
apps/api/app/auth/: __init__.py  supabase.py
apps/api/app/core/: logging.py  settings.py
apps/api/app/db/: __init__.py  models.py  session.py
apps/api/app/llm/: __init__.py  gateway.py  types.py
apps/api/app/llm/providers/: base.py  gemini.py  ollama.py
apps/api/app/observability/: __init__.py  langfuse.py
apps/api/app/rag/: chunker.py  embeddings.py  ingest.py  loaders.py  reranker.py  retrieval.py
apps/api/app/routers/: analyze.py  health.py  ingest.py  stream.py  tickers.py
apps/api/app/tools/: __init__.py  _http.py  data.py  indicators.py  news.py
apps/api/tests/: test_chunker.py  test_health.py  test_indicators.py  test_reporter.py  test_risk_routing.py  test_rrf.py
apps/reranker/: Dockerfile  app.py
apps/web/: Dockerfile  package.json  tailwind.config.ts  tsconfig.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/dashboard/: page.tsx
apps/web/app/trace/: page.tsx
apps/web/components/: compass-mark.tsx  footer.tsx  language-toggle.tsx  nav.tsx  trace-timeline.tsx
apps/web/i18n/: en.json  zh-TW.json
apps/web/lib/: api.ts  i18n.ts
blog/: 01-multi-agent-overview.md  02-hybrid-rag-numbers.md  03-cloudrun-langgraph-terraform.md
data/thesis/: 2330_long_thesis.md  2454_neutral.md  macro_taiwan_2026.md
docs/: DEPLOY.md  OLLAMA.md  SETUP.md  SUPABASE.md  TAVILY.md
eval/: README.md  golden_set.jsonl  ragas_eval.py
eval/results/: ragas_prod-with-rag_20260505-181605.csv  ragas_prod-with-rag_20260505-181605.json
infra/scripts/: apply-supabase-migrations.sh  bootstrap.sh  seed-secrets.sh
infra/supabase/migrations/: 0001_init.sql
infra/terraform/: .terraform.lock.hcl  artifact_registry.tf  cloudrun.tf  main.tf  outputs.tf  secrets.tf  service_accounts.tf  storage.tf  tasks.tf  variables.tf  versions.tf
